syntax = "proto3";

package user;

option go_package = "/user";


service UserService {
      rpc NewUser(NewUserRequest) returns (NewUserResponse);
      rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
      rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
      rpc DeleteUserById(DeleteUserByIdRequest) returns (DeleteUserByIdResponse);
}


// get Users
message GetUsersRequest {}
message UserinGetUsers {
      int64  id = 1;
      string name = 2;
      string email = 3;
      string gender = 4;
}
message GetUsersResponse {
      repeated UserinGetUsers users = 1;
}

// get user
message GetUserByIdRequest { uint64 id = 1; }
message GetUserByIdResponse {
      uint64  id = 1;
      string name = 2;
      string email = 3;
      string gender = 4;
}


// delete
message DeleteUserByIdRequest { uint64 id = 1; }
message DeleteUserByIdResponse { bool ok = 1; }



// new
message NewUserRequest {
      string name = 1;
      string email = 2;
      string gender = 3;
      string password = 4;
}
message NewUserResponse {
      uint64 id = 1;
}
